--- a/src/components/ContactSection.css
+++ b/src/components/ContactSection.css
@@ -9,7 +9,7 @@
 }
 
 .contact-gradient-container {
-  background-image: url("../../../assets/vaporwave_background.png");
+  background-image: url("/assets/vaporwave_background.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
